# ECE439Code

./: .gitignore
FinalProjectCode/: avaliable_cameras.py  ball_tracking.py  draw_robot_model.py  hsv_calibration.py  ik_test.py  kalman_filter.py  predicted_vs_actual.csv  robot_inverse_kinematics.py  servo_control_gui.py  stero_calibration.py  steroe_vision_tracking.py  track_3d_ball.py  trajectory_plot.py
FinalProjectCode/ros2_robot_arm/: package.xml  setup.py
FinalProjectCode/ros2_robot_arm/launch/: robot_arm_system.launch.py
FinalProjectCode/ros2_robot_arm/ros2_robot_arm/: README.md  arm_position_setter.py  inverse_kinematics.py  params.yaml  servo_commands.py  servo_gui.py  stereo_vision_position_detection.py
FinalProjectCode/single_camera_calibration/: camera_calibration_data.npz  camera_calibration_data_left.npz  camera_calibration_data_right.npz
FinalProjectCode/stereo_calibration_output/: stereo_calibration_data.npz
install/: setup.sh
install/basic_motors_and_sensors/lib/basic_motors_and_sensors/: encoders_node  sensors_to_motor
install/basic_motors_and_sensors/share/basic_motors_and_sensors/: package.dsv  package.sh  package.zsh
log/: latest_build
src/basic_motors_and_sensors_ros2_v01C/basic_motors_and_sensors/: package.xml  setup.cfg  setup.py
src/i2c_sensors_ros2/i2c_sensors/: package.xml  setup.cfg  setup.py
src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/simple_motors/: setup.cfg  setup.py
src/simple_motors/simple_motors/: motor_commander.py  motors_commander.py  motors_executor.py
(+35 files in other folders)
