<?xml version="1.0"?>
<package format="3">
  <name>ros2_robot_arm</name>
  <version>0.1.0</version>
  <description>ROS2 package for stereo vision and robot arm control</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
